# design-patterns-modern

./: CMakeLists.txt  README.md  build.sh  compile_commands.json
c/: command.c  strategy.c  visitor.c
command/classic/: main.cpp
command/modern/: main.cpp
rust/: Cargo.toml
strategy/classic/: main.cpp
strategy/modern/: main.cpp
visitor/classic/: main.cpp
visitor/modern/: main.cpp
